fixed distorted image on profile

--- a/src/assets/css/ProfileBody.css
+++ b/src/assets/css/ProfileBody.css
@@ -15,15 +15,20 @@
 } */
 
 #ProfileBody .profile-img {
-  position: relative;
-  overflow: hidden;
-  border-radius: 50%;
   height: 300px;
   width: 300px;
-  margin: 0px auto;
+  border-radius: 50%;
+  margin: 0 auto;
+  overflow: hidden;
 }
-
-#ProfileBody .profile-img .img {
+#ProfileBody .profile-img .avatar {
+  height: 300px;
+  width: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+/* #ProfileBody .profile-img .img {
   position: absolute;
   height: 340px;
   width: 340px;
@@ -33,7 +38,7 @@
   bottom: 50%;
   left: 0%;
   transform: translateY(50%);
-}
+} */
 
 #ProfileBody p {
   font-weight: bold;
